# remove_pic_background

./: README.md  pyproject.toml
src/: remove_pic_background.py
