[tool.poetry]
name = "remove-pic-background"
version = "0.1.0"
description = ""
authors = ["Sambiase <marsamb@gmail.com>"]
readme = "README.md"
packages = [{include = "remove_pic_background"}]

[tool.poetry.dependencies]
#python = "^3.10"
python = ">=3.10,<3.11"
rembg = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
